2012-04-05  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r113241.
        http://trac.webkit.org/changeset/113241
        https://bugs.webkit.org/show_bug.cgi?id=83293

        Requested by sievers@chromium.org (Requested by zhenyao on
        #webkit).

        * tests/CCLayerTreeHostImplTest.cpp:
        (WebKitTests::TEST_F):
        * tests/CCLayerTreeHostTest.cpp:
        (WTF::CCLayerTreeHostTest::doBeginTest):

2012-04-05  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r113341.
        http://trac.webkit.org/changeset/113341
        https://bugs.webkit.org/show_bug.cgi?id=83299

        bots caught some build errors (Requested by shawnsingh on
        #webkit).

        * tests/CCLayerTreeHostCommonTest.cpp:

2012-04-05  Ian Vollick  <vollick@chromium.org>

        [chromium] Race condition in CCLayerTreeHostTestSynchronizeAnimationStartTimes
        https://bugs.webkit.org/show_bug.cgi?id=83179

        Reviewed by James Robinson.

        * tests/CCLayerTreeHostTest.cpp:
        (WTF::TestHooks::willAnimateLayers):
        (WTF::MockLayerTreeHostImpl::animateLayers):
        (WTF::CCLayerTreeHostTestSynchronizeAnimationStartTimes::CCLayerTreeHostTestSynchronizeAnimationStartTimes):
        (CCLayerTreeHostTestSynchronizeAnimationStartTimes):
        (WTF::CCLayerTreeHostTestSynchronizeAnimationStartTimes::willAnimateLayers):
        (WTF::CCLayerTreeHostTestSynchronizeAnimationStartTimes::notifyAnimationStarted):

2012-04-05  Justin Novosad  <junov@chromium.org>

        [Chromium] With the skia port, setting LCD text filtering is causing
        texture cache invalidations of gpu canvas backing store
        https://bugs.webkit.org/show_bug.cgi?id=74183

        Reviewed by Stephen White.

        Replacing unnecessary usage of SkCanvas::LayerIter with call to
        SkCanvas::isDrawingToLayer(). Same results, lower overhead, and no
        GPU texture invalidation.
