@@ -1,3 +1,13 @@
+2012-04-05  Dana Jansens  <danakj@chromium.org>
+
+        [chromium] Cleanup test, redundant code in CCSchedulerTest.NoBeginFrameWhenDrawFails
+        https://bugs.webkit.org/show_bug.cgi?id=83300
+
+        Reviewed by Adrienne Walker.
+
+        * tests/CCSchedulerTest.cpp:
+        (WebKitTests::TEST):
+
 2012-04-05  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r113241.
